--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>{% block title %}CRUD App{% endblock %}</title>
+        <link rel="icon" type="image/svg+xml" href="{{ asset('assets/images/favicon.svg') }}">
 
-        {% block javascripts %}
-        {% endblock %}
+        {{ encore_entry_link_tags('app', null, 'assets') }}
+        {{ encore_entry_link_tags('css/custom', null, 'assets') }}
+
+        {% block stylesheets %} {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            {% block navbar %} {% endblock %}
+        </nav>
+        <main class="container mt-5">
+            {% block body %} {% endblock %}
+        </main>
+
+        {{ encore_entry_script_tags('app', null, 'assets') }}
+        {{ encore_entry_script_tags('js/custom', null, 'assets') }}
+
+        {% block javascripts %} {% endblock %}
     </body>
 </html>
