--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -7,7 +7,7 @@
 
 {% block navbar %}
     <div class="container">
-        <a class="navbar-brand" href="{{ path('products.index') }}">My Products</a>
+        <a class="navbar-brand" href="{{ path('products.index') }}">Products</a>
     </div>
 {% endblock %}
 
